# Simpagent

./: .env.example  .env.production.example  .gitignore  .gitmodules  AGENTS.md  PLAN.md  README.md  compose.prod.yaml  compose.test.yaml  compose.yaml  prompt.md  skills-lock.json
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_account_access.py  0002_platform_foundations.py  0003_chat_turn_state.py  0003_python_execution_contracts.py  0004_agent_runtime_settings.py  0005_encrypt_message_content.py  0005_websearch_provider_runtime_override.py  0006_sender_constrained_replay_foundations.py
backend/app/: main.py  python_contract.py
backend/app/agent/: __init__.py  coordinator.py  decisions.py  orchestration.py  policy.py
backend/app/ai/: __init__.py  chat_adapter.py  prompts.py  schemas.py
backend/app/api/: __init__.py
backend/app/authorization/: policy.py  principal.py
backend/app/cli/: __init__.py  __main__.py  bootstrap_admin.py  init_dev_secrets.py  seed_demo.py
backend/app/core/: config.py  errors.py  logging.py  provider_status.py  tracing.py
backend/app/db/: __init__.py  session.py
backend/app/identity/: __init__.py  account_linker.py  contracts.py  local_provider.py  oauth_service.py  redaction.py
backend/app/models/: __init__.py  account.py  domain.py  evidence.py  python_state.py  session.py
backend/app/schemas/: __init__.py  admin.py  auth.py  chat.py  health.py  python.py  search.py
backend/app/security/: __init__.py  access_tokens.py  csrf.py  (+7 more)
backend/tests/: conftest.py
(+856 files in other folders)
