[project]
name = "simpagent-backend"
version = "0.1.0"
description = "Secure account access backend for SimpAgent"
requires-python = ">=3.13,<3.14"
dependencies = [
  "fastapi>=0.136,<0.137",
  "uvicorn[standard]>=0.49,<0.50",
  "pydantic>=2.12,<3",
  "pydantic-settings>=2.14,<2.15",
  "sqlalchemy>=2.0.50,<2.1",
  "alembic>=1.18.4,<1.19",
  "psycopg[binary]>=3.3,<3.4",
  "greenlet>=3.2,<4",
  "PyJWT[crypto]>=2.13,<3",
  "pwdlib[argon2]>=0.3,<0.4",
  "email-validator>=2.3,<3",
  "google-adk>=2.2,<2.3",
  "google-genai>=2.8,<2.9",
  "openai>=2,<3",
  "python-multipart>=0.0.20,<1",
  "Authlib>=1.7,<2",
]

[project.optional-dependencies]
dev = [
  "pytest>=9,<10",
  "pytest-asyncio>=1.4,<2",
  "httpx>=0.28,<1",
]

[build-system]
requires = ["setuptools>=80", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"
addopts = "-ra"
testpaths = ["tests"]
markers = [
  "smoke: end-to-end topology smoke tests",
  "integration: integration tests requiring PostgreSQL",
  "security: security-sensitive tests",
]
filterwarnings = [
  "error",
  "ignore::DeprecationWarning:google.*",
  "ignore:BaseAgentConfig is deprecated and will be removed in future versions\\.:DeprecationWarning",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]
